--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,7 +3,7 @@
 .container {
   width: var(--container-width);
   margin: 0 auto;
-  padding: 0 1em;
+  // padding: 0 1em;
 }
 
 .inner-container {
@@ -45,6 +45,18 @@
   height: 100%;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
+.align-self-start {
+  align-self: flex-start;
+}
+
+.flex-1 {
+  flex: 1;
+}
+/* General Helpers*/
 
 /* Breakpoint mixins */
 
