--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,14 @@
 @import 'forms';
 
 /* Components */
+@import 'about';
+@import 'contact';
+@import 'gallery';
+@import 'navbar';
+@import 'editor';
 
 
+* {
+    border: 1px solid black;
+}
 
