--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -15,3 +15,11 @@
   font-weight: 400;
 }
 
+/*----------  Lato Font  ----------*/
+
+@font-face {
+  font-family: 'Lato';
+  src: url('../assets/fonts/Lato/Lato-Regular.ttf');
+  font-weight: 700;
+}
+
