--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,12 +6,13 @@ $mobile-breakpoint: 642px;
   --container-width: $container-width;
   --inner-container-width: 900px;
   /* Fonts */
-  --primary-font: Playfair;
+  --primary-font: Lato;
   --secondary-font: Ubuntu;
   /* Colors */
   --main-color: #626262;
   --sections-bg: #f0f0f0;
   --top-nav-bg: #323232;
+  --li-hover: #2ab499;
 }
 
 
