--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -17,3 +17,9 @@
     height: 300px; //TODO: Don't forget to remove!    
     flex-grow: 4;
 }
+
+.thumbnails li img{
+
+       height: 50px;
+    
+}
