--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -18,8 +18,10 @@
     flex-grow: 4;
 }
 
-.thumbnails li img{
-
-       height: 50px;
-    
+.thumbnails {
+    li{
+      img {
+            height: 50px;
+            }
+      }
 }
