--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,6 +13,8 @@ $mobile-breakpoint: 642px;
   --sections-bg: #f0f0f0;
   --top-nav-bg: #323232;
   --li-hover: #2ab499;
+  --img-hover-border: em(2px) solid darkgreen;
+
 }
 
 
