--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,3 +1,9 @@
+.gallery {
+    display: none;
+}
+.meme-editor{
+    display: block;
+}
 .search-input {
     background-color: yellow;
     text-align: center;
@@ -19,17 +25,10 @@
 }
 
 .thumbnails {
-<<<<<<< HEAD
-    li{
-      img {
-            height: 50px;
-            }
-      }
-=======
+
     li {
         img {
             height: 100px;
         }
     }
->>>>>>> 810a4be7f5cf423599e8cfe94311ce9a7b66d0f6
 }
