canvas on top of eachother!

--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -1,15 +1,7 @@
 
-.meme-canvas{
-    background-color: lightgray;
-    border: 1px solid black;
-}
-
-.meme-editor{
-    
-}
-
-
 .meme-toolbox {
+    // display: block;
+    // position: absolute;
     button {
         cursor: pointer;
         transition: color 0.3s;
