--- a/scss/_canvas.scss
+++ b/scss/_canvas.scss
@@ -1,33 +1,32 @@
-// .canvas-box{
-// //     display: block;
-// //     height: 50px;
-// //     margin: 0;
-// //     position: relative;
-// // }
-
-// .meme-canvas{
-//     // background-color: lightgray;
-//     // position: absolute;
-//     // z-index: 1;
-//     // left: 0;
-//     // top: 0;
-    
-// }
-
-
 .canvas-box{
    position: relative;
+  
+   
 }
 .meme-canvas-div{
-    // position: absolute;
-    // opacity: 0.3;
     z-index: 1;
-  
+    width: 100%;
+ 
 }
 .txt-canvas-div{
     position: absolute;
     z-index: 2;
+
+    
+    // width: 500px;
+    // height: 360px;
   
+}
+
+.meme-canvas{
+    // width: 500px;
+    // height: 360px;
+   
+
+.txt-canvas{
+    //  width: 500px;
+    // height: 360px;
+    // flex-grow:2 
 }
 
 
