--- a/scss/_canvas.scss
+++ b/scss/_canvas.scss
@@ -10,23 +10,14 @@
 }
 .txt-canvas-div{
     position: absolute;
-    z-index: 2;
-
-    
-    // width: 500px;
-    // height: 360px;
-  
+    z-index: 2; 
 }
 
 .meme-canvas{
-    // width: 500px;
-    // height: 360px;
-   
+}
 
 .txt-canvas{
-    //  width: 500px;
-    // height: 360px;
-    // flex-grow:2 
+
 }
 
 
