--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,6 +6,7 @@ $xs:340px;
   /* Layout */
   --container-width: $container-width;
   --inner-container-width: 900px;
+  --about-height: 340px;
   /* Fonts */
   --primary-font: Lato;
   --secondary-font: Ubuntu;
@@ -13,6 +14,8 @@ $xs:340px;
   --main-color: #626262;
   --sections-bg: #f0f0f0;
   --top-nav-bg: #323232;
+  --about-bg: #2eb398;
+  --contact-bg: #323232;
   --li-hover: #2ab499;
   --img-hover-border: em(2px) solid darkgreen;
 
