some edit changes

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,7 @@
 .nav-container {
     height: em(65px);
     background-color: var(--top-nav-bg);
+    margin-bottom: em(20px);
     li {
         a{
              color: #f1f1f1;
