--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,10 +1,11 @@
 .gallery {
     display: block;
+    border: 2px solid var(--main-color);
 }
 
 .search-input {
-    background-color: yellow;
     text-align: center;
+    margin: auto;
 }
 
 .responsive-gallery {
@@ -12,7 +13,6 @@
 
 .tags-display {
     background-color: blue;
-    height: 300px; //TODO: Don't forget to remove!
     flex-grow: 1;
 }
 
