--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -1,5 +1,9 @@
 
 .meme-toolbox {
+    background-color: var(--main-color);
+     padding-top:8px;
+     padding-bottom:8px;
+    
     input.tool-box-txt{
         width:100%;
         border-radius: 4px;
@@ -7,9 +11,12 @@
         margin-bottom: 7px;
         height:30px;
         padding-left: 7px;
-
+        background-color:lightgray;
+        border:none;
+        outline: none;
     }
-    button {
+    
+    button.btn-edit {
         border:none;
         border-radius: 4px;
         margin: 2px;
@@ -21,5 +28,26 @@
                 color: green;
                 border: 1px solid gray;
             }
+    }
+}
+
+.btn-return > button{
+        width:50%;
+        padding: 15px;
+        margin-top:8px;
+        margin-bottom:8px;
+        border-radius:6px;
+        font-weight: 900;
+        background-color: var(--about-bg);
+        border:none;
+        color: var(--main-color);
+        font-family: lato;
+    
+        cursor: pointer;
+            transition: color 0.3s;
+            &:hover {
+                color: white;
+                outline-color: 1px solid gray;
+    
     }
 }
