--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -33,7 +33,7 @@
   align-items: center;
 }
 
-.align-sart {
+.align-start {
   align-items: flex-start;
 }
 
@@ -55,6 +55,10 @@
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .align-self-start {
