some canvas updates

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,7 +17,7 @@ $xs:340px;
   --about-bg: #2eb398;
   --contact-bg: #323232;
   --li-hover: #2ab499;
-  --img-hover-border: em(4px) solid darkgreen;
+  --img-hover-border: em(4px) solid darkblue;
   --img-nohover-border: em(4px);
 
 }
