moving sidebars are working!

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,7 +7,7 @@
 //  }
 
 html {
-  color: var(--main-color);
+  background-color: var(--main-color);
   font-family: var(--primary-font);
   font-size: 16px;
 }
@@ -22,4 +22,8 @@ ul,
 fieldset {
   padding: 0;
   margin: 0;
+}
+
+.moveables {
+  display:block;
 }
