--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -1,4 +1,7 @@
-
+.meme-editor {
+    padding-top: em(30px);
+    z-index: 5;
+}
 .meme-toolbox {
     background-color: var(--main-color);
      padding-top:8px;
