--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,7 +1,7 @@
 .nav-container {
     height: em(65px);
     background-color: var(--top-nav-bg);
-    margin-bottom: em(20px);
+    // padding-bottom: em(20px);
     ul{
         position: relative;
         width: 100%;
