--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,7 +1,12 @@
 .gallery {
-    display: block;
+    position: absolute;
     border: 2px solid var(--main-color);
     z-index: 1;
+    transition: transform 2s;
+}
+
+.search-box {
+    padding-top: em(30px);
 }
 
 .search-input {
