--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -3,10 +3,12 @@
     border: 2px solid var(--main-color);
     z-index: 1;
     transition: transform 2s;
+    text-align: center;
 }
 
 .search-box {
     padding-top: em(30px);
+    padding-bottom: em(30px);
 }
 
 .search-input {
@@ -17,9 +19,6 @@
 
 .tags-display-button {
     z-index: 1;
-}
-
-.responsive-gallery {
 }
 
 .tags-display {
@@ -48,4 +47,8 @@
             }
         }
     }
+}
+
+.loadmore {
+    margin-top: em(40px);   
 }
