--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,4 +1,120 @@
 .contact { //TDOD: don't forget to delete
     height: 200px;
-    background-color: #323232;
+    background: var(--contact-bg);
+  
 }
+
+.contact-container{
+    width:100%;
+    background-color : var(--contact-bg);
+    padding: 20px 15px;
+}
+
+.contct-form{
+    h2{
+        color:white;    
+    }
+    input, textarea {
+        width: 100%;
+        background: #454545;
+        line-height: 40px;
+        border: none;
+        border-radius: 6px;
+        padding: 0 15px;
+        margin-bottom: 10px;
+        color: var(--main-color);
+        font-size: var(--font-small);
+    }
+
+}
+
+.sub-title{
+    // margin-top:7px;
+    margin-bottom:15px;
+    color: white;
+      
+    // font-size: var(--font-small);
+}
+
+.contct-sbmt-btn{
+    background-color: var(--about-bg);
+    border:none;
+    outline:none;
+    border-radius: 4px;
+    padding:8px 13px;
+    font-family: sans-serif;
+    font-size: var(--font-small);
+    color: white;
+     &:hover {
+            color:  var(--main-color);
+           
+        }
+}
+
+.contct-info-desc{
+    color: white;
+    margin-top: em(15px);
+    margin-bottom: em(20px);
+}
+
+.contct-info-details{
+    padding-top: em(20px);
+    color:white;
+    i{
+        color:var(--about-bg);
+        padding-right:em(20px);
+        
+    }
+}
+
+// contct-info-desc
+// .contact {
+//     background: var(--contact-bg);
+//     padding: 60px 0;
+// }
+// .conct-form {
+//     margin: 0 20px;
+//     width: calc(75% - 30px);
+//     @include for-mobile-only {  
+//         width: 100%;
+//     }
+
+//     input, textarea {
+//         width: 100%;
+//         background: #454545;
+//         line-height: 40px;
+//         border: none;
+//         padding: 0 15px;
+//         margin-bottom: 15px;
+//         color: var(--main-color);
+//         font-size: var(--font-small);
+//     }
+// }
+// .contact__info {
+//     font-size: var(--font-small);
+//     margin-right: 20px;
+//     margin-top : em(100px);
+//     width: calc(25% - 30px);
+//     @include for-mobile-only {  
+//         width: 100%;
+//     }
+// }
+// .contact__info-details{
+//     margin-top : em(55px);
+// }
+// .contact__info-desc {
+//     height: 117px;
+//     width: 180px;
+//     line-height: 22px;
+//     @include for-mobile-only {  
+//         width: 100%;
+//         height: auto;
+//     }
+// }
+// .contact-form__sumbit-button {
+//     border: none;
+//     color : #d7fcf5;
+//     @include for-mobile-only {  
+//         width: 100%;
+//     }
+// }
