--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -28,7 +28,7 @@
         cursor: pointer;
         transition: color 0.3s;
         &:hover {
-            color: green;
+            color:grey;
             border: 1px solid gray;
         }
     }
