--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -36,7 +36,7 @@
     // font-size: var(--font-small);
 }
 
-.contct-sbmt-btn{
+.contact-submit-button{
     background-color: var(--about-bg);
     border:none;
     outline:none;
